Fix for Pipeline quick edit page: Look up(label/input mis-aligned) #2959

--- a/server/webapp/WEB-INF/rails.new/app/assets/new_stylesheets/single_page_apps/pipeline_configs/_stages.scss
+++ b/server/webapp/WEB-INF/rails.new/app/assets/new_stylesheets/single_page_apps/pipeline_configs/_stages.scss
@@ -221,8 +221,6 @@ $task-body-bg: #f5f5f5;
 
   .lookup {
     background: #f5f5f5;
-    padding:    10px 20px;
-    margin:     0 15px;
   }
 
   .runif {
